[project]
name = "akira-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.117.1",
    "gitpython>=3.1.45",
    "langchain>=0.3.27",
    "langchain-core>=0.3.76",
    "langchain-google-vertexai>=2.1.2",
    "pygithub>=2.8.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "uvicorn>=0.36.0",
]
